--- a/Bike_Sharing_Demand_Prediction(Pravin_notebook)_Capstone_Project.ipynb
+++ b/Bike_Sharing_Demand_Prediction(Pravin_notebook)_Capstone_Project.ipynb
@@ -8382,7 +8382,7 @@
       "source": [
         "# **CONCLUSION**\n",
         "\n",
-        "**During the time of our analysis, we initially did EDA on all the features of our datset. We first analysed our dependent variable, 'Rented Bike Count' and also transformed it. Next we analysed categorical variable and dropped the variable who had majority of one class, we also analysed numerical variable, found out the correlation, distribution and their relationship with the dependent variable. We also removed some numerical features who had mostly 0 values and hot encoded the categorical variables.**\n",
+        "**During the time of our analysis, we initially did EDA on all the features of our datset. We first analysed our dependent variable, 'Rented Bike Count' and also transformed it. Next we analysed categorical variable and dropped the variable who had majority of one class, we also analysed numerical variable, found out the correlation, distribution and their relationship with the dependent variable. We also removed some numerical features who had mostly 0 values and create dummy variable for the categorical variables.**\n",
         "\n",
         "\n",
         "**Next we implemented 6 machine learning algorithms Linear Regression,lasso,ridge,decission tree, Random Forest and Gradientboosting. We did hyperparameter tuning to improve our model performance. The results of our evaluation are:**"
@@ -8666,6 +8666,13 @@
         "\n",
         "**6. We can deploy  Random forest Regressor and Gradient Boosting model.**\n",
         "\n",
+        "**7. The most important features who had a major impact on the model predictions were; hour, temperature, Humidity, solar-radiation, and Winter.**\n",
+        "\n",
+        "**8. Demand for bikes got higher when the temperature and hour values were more.**\n",
+        "\n",
+        "**9.  Demand was high for low values of Humidity and solar radiation.**\n",
+        "\n",
+        "**10. Demand was high during springs and summer and autumn and very low during winters.**\n",
         "\n",
         "**However, this is not the ultimate end. As this data is time dependent, the values for variables like temperature, windspeed, solar radiation etc., will not always be consistent. Therefore, there will be scenarios where the model might not perform well. As Machine learning is an exponentially evolving field, we will have to be prepared for all contingencies and also keep checking our model from time to time. Therefore, having a quality knowledge and keeping pace with the ever evolving ML field would surely help one to stay a step ahead in future.**\n",
         "\n",
